# diploma-thesis

./: .editorconfig  .gitignore  .pre-commit-config.yaml  CLAUDE.md  Makefile  README.md  alembic.ini  deep-research-report.md  pyproject.toml
.claude/: settings.json
.claude/agents/: parser-adapter-author.md  schema-migrator.md
.claude/commands/: add-source.md  run-pipeline.md  verify-mvp.md
apps/backend/: Dockerfile
apps/frontend/: .env.example  Dockerfile  index.html  nginx.conf  package-lock.json  package.json  vite.config.ts
apps/normalizer/: Dockerfile  __init__.py
apps/parser/: Dockerfile  __init__.py
apps/scheduler/: Dockerfile
docs/: ARCHITECTURE.md  DATABASE_SCHEMA.md  GLOSSARY.md  PARSER_TEST_SCRIPT.md  PATTERNS.md  architecture-foundation.md  current-gap-analysis.md  mvp-demo-runbook.md  mvp-finalization-20-commit-plan.md  mvp-scope-freeze.md  roadmap.md
docs/adr/: 0000-template.md  0001-evidence-first-pipeline.md  0002-quorum-queues-with-dlx.md  0003-typed-program-tables.md
infra/docker-compose/: docker-compose.override.yml  docker-compose.yml
infra/env/: README.md
infra/minio/: bootstrap.sh
infra/prometheus/: prometheus.yml
infra/rabbitmq/: definitions.json
libs/: __init__.py
libs/contracts/: __init__.py
libs/observability/: __init__.py  domain_metrics.py  service_factory.py
libs/quality/: __init__.py
libs/source_catalog/: __init__.py  models.py  mvp_live.py
libs/source_sdk/: __init__.py  base_adapter.py
libs/storage/: __init__.py  auth.py  settings.py  worker.py
scripts/: mvp_fixtures.py
scripts/replay/: README.md  (+2 more)
(+351 files in other folders)
